# cashka

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  Makefile  README.md  ROADMAP  cashka.json  main.cpp
cashka/: main.cpp  options.cpp  options.h  options_config.cpp  pm.cpp  pm.h  server.cpp  server.h
cashka-cli/: cashka-cli.cpp  cashka-cli.h  client.cpp  client.h  main.cpp  options.cpp  options.h  options_check.cpp  options_cli.cpp  options_config.cpp
client/: CMakeLists.txt  main.c
confi/: check.c  check.h  confi.c  confi.h  err.c  err.h  token.c  token.h  value.c  value.h
inc/: cashka.cpp  cashka.h  options.cpp  options.h  options_check.cpp  options_cli.cpp  options_config.cpp  pm.cpp  pm.h  server.cpp  server.h
libclient/: CMakeLists.txt  cashka.c  cashka.h
protocol/: hello.cpp  hello.h  protocol.cpp  protocol.h
query/: get.cpp  get.h  hello.cpp  hello.h  isset.cpp  isset.h  query.cpp  query.h  set.cpp  set.h
server/: CMakeLists.txt  cashka.conf  cashka.h  cashka.pid  err.c  err.h  main.c
server/inc/: cashka.h  err.c  err.h
server/opt/: cfg.c  check.c  cli.c  def.c  opt.c  opt.h
server/pm/: pm.c  pm.h
